--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.19.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "5.0.0",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
+    "sweetalert2": "^9.5.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
