--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "axios": "^0.19.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "5.0.0",
+    "react-scripts": "3.3.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "sweetalert2": "^9.5.3",
